--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Music Player</string>
     <string name="show_name">Name : %s</string>
     <string name="show_artist">Artist : %s</string>
+    <string name="show_duration">Duration : %s</string>
+    <string name="show_url">URL : %s</string>
 
     <string-array name="genre_name">
         <item>Bangla Boul Song</item>
